Fixed spacing on the last element in the contact details section

--- a/src/www.arragro.com/wwwroot/css/site.scss
+++ b/src/www.arragro.com/wwwroot/css/site.scss
@@ -637,19 +637,33 @@ header#standardHeader {
                 }
             }
 
-            @media (orientation: landscape) and (min-width: 768px) and (min-height: 1180px) {
+            .contact-section {
+                &:last-child .col-12.col-lg-6 {
+                    margin-bottom: 1rem;
+                }
+            }
+
+            @media (orientation: portrait) and (min-width: 768px) and (min-device-height: 1180px) {
+                .contact-section {
+                    &.col-12.col-lg-6 {
+                        margin-bottom: 0;
+                    }
+                }
+            }
+
+            @media (orientation: landscape) and (min-width: 768px) and (min-device-height: 1180px) {
                 .contact-section {
                     padding-top: 1rem;
                 }
             }
 
-            @media (orientation: landscape) and (max-width: 812px) {
+            @media (orientation: landscape) and (max-device-width: 812px) {
                 .pt-5 {
                     padding-top: 1rem !important;
                 }
             }
 
-            @media (orientation: landscape) and (max-width: 768px) {
+            @media (orientation: landscape) and (max-device-width: 768px) {
                 .pt-5 {
                     padding-top: 1rem !important;
                 }
